# rattler-build-conda-compat

./: .gitignore  .pre-commit-config.yaml  README.md  enviroment.yaml  pixi.toml  pyproject.toml
.github/workflows/: build.yml  pre-commit.yml  tests.yml  type-check.yml
docs/: RELEASING.md
scripts/: release_version_check.py
src/rattler_build_conda_compat/: conditional_list.py  jinja.py  lint.py  loader.py  modify_recipe.py  recipe_sources.py  render.py  utils.py  variant_config.py  yaml.py
src/rattler_build_conda_compat/jinja/: filters.py  jinja.py  objects.py
tests/: conftest.py  test_conditional_list.py  test_jinja.py  test_rattler_loader.py  test_rattler_render.py  test_recipe_modification.py  test_recipe_sources.py  test_utils.py
tests/__snapshots__/: test_jinja.ambr  test_rattler_loader.ambr  test_rattler_render.ambr
tests/data/: context.yaml  env_recipe.yaml  eval_recipe_using_context.yaml  if_then_source.yaml  list_of_url_sources.yaml  mamba_recipe.yaml  multiple_outputs.yaml  multiple_sources.yaml  osx_recipe.yaml  outputs_source.yaml  recipe_requirements.yaml  recipe_tests.yaml  rich_recipe.yaml  single_source.yaml  variants.yaml
tests/data/build_number/test_2/: expected.yaml
tests/data/jolt-physics/: recipe.yaml  sources.yaml
tests/data/jolt-physics/ci_support/: linux_64_.yaml  osx_64_.yaml  win_64_.yaml
tests/data/version/embree/: expected.yaml  recipe.yaml
tests/data/version/future_tests/: r2.yaml
tests/data/version/jinja2sha/: recipe.yaml
tests/data/version/mpich/: expected.yaml  recipe.yaml
tests/data/version/polars_variant/: recipe.yaml
tests/data/version/test_2/: expected.yaml  recipe.yaml
tests/data/version/test_4/: expected.yaml
