[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.24",
]

[project]
name = "rattler-build-conda-compat"
version = "0.2.5"

description = "A package for exposing rattler-build API for conda-smithy"
readme = "README.md"
license.file = "LICENSE.txt"
authors = [
  { email = "nichita@prefix.dev", name = "Nichita Morcotilo" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typing-extensions>=4.12,<5",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
exclude = [
  "src/rattler_build_conda_compat/lint.py",
  "src/rattler_build_conda_compat/render.py",
  "src/rattler_build_conda_compat/utils.py",
]
ignore = [
  "A003",
  "ANN101",
  "COM812",
  "D",
  "E501",
  "ISC001",
  "PTH",
  "T201",
]
select = [
  "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN001",
  "INP001",
  "PLR2004",
  "S101",
]

[tool.mypy]
allow_redefinition = true
python_version = "3.8"

[tool.pyright]
venv = "py312"
venvPath = ".pixi/envs"
