[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rattler-build-conda-compat"
description = "A package for exposing rattler-build API for conda-smithy"
version = "1.2.1"
readme = "README.md"
authors = [{ name = "Nichita Morcotilo", email = "nichita@prefix.dev" }]
license = { file = "LICENSE.txt" }
dependencies = [
    "typing-extensions>=4.12,<5",
    "jinja2>=3.0.2,<4",
    "tomli>=2.0.1,<3",
    "ruamel.yaml>=0.18.6,<0.19",
]
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "D",      # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    "T201",   # https://docs.astral.sh/ruff/rules/print/
    "A003",   # https://docs.astral.sh/ruff/rules/builtin-attribute-shadowing/
    "PTH",    # We dont want to change the API to pathlib just yet
    "ANN101", # Deprecated
]
exclude = [
    "src/rattler_build_conda_compat/lint.py",
    "src/rattler_build_conda_compat/render.py",
    "src/rattler_build_conda_compat/utils.py",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "INP001", "PLR2004", "ANN001"]

[tool.pyright]
venvPath = ".pixi/envs"
venv = "py312"

[tool.mypy]
python_version = "3.8"
allow_redefinition = true
